# pysplot

./: .gitignore  pyproject.toml
pysplot/: __init__.py  config.py  main.py  ui.py  workers.py
