[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysplot"
version = "1.0.0"
description = "Real-time serial data plotter with dark theme"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ville Klar", email = "ville.klar@iki.fi"}
]
keywords = ["serial", "plotter", "data-visualization", "pyqt", "pyqtgraph"]

dependencies = [
    "PyQt6>=6.0.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.20.0",
    "pyserial>=3.5",
]

[project.scripts]
pysplot = "pysplot.main:main"

[tool.setuptools]
packages = ["pysplot"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W"]
